--- a/indexPrimeiroSite.html
+++ b/indexPrimeiroSite.html
@@ -25,7 +25,7 @@
             </div>
         </main>
     </header>
-    <main class="col-100">
+    <main class="col-100 menu-urls">
         <div class="header-2">
             <div class="menu">
                 <ul>
@@ -38,7 +38,7 @@
                 </ul>
             </div>
             <div class="busca">
-                <input type="text">
+                <input placeholder="Search Something" type="text" />
             </div>
         </div>
     </main>
